--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,11 @@ Icon?
 ehthumbs.db
 Thumbs.db
 
-# Vim swap files #
+# IDE/editor files #
 ##################
 *.swp
+*.iml
+.idea/
 
 # Python #
 #################
@@ -53,6 +55,8 @@ __pycache__/
 *.py[cod]
 .env
 .python-version
+/venv/
+/.venv/
 
 # pyenv #
 #########
